React Route Project working, finished

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
+:root {
+  --container-padding: 0.5rem 0.5rem;
+  --grid-gap: 0.5rem;
+  --container-border: 2px solid #32d121;
+  --container-border-radius: 0.5rem;
+  --container-margin: 0.5rem 1rem;
+  --container-text: 0.8rem;
+  --btn-padding: 0.4rem 1rem;
+  --btn-radius: 0.2rem;
+  --btn-bg-color: #32d121;
+  --btn-color: #eee;
+  --link-color: #d46102;
+}
+
+
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: var(--grid-gap);
+  margin: var(--container-margin);
+}
+
+main.friend-container {
+  width: 600px;
+  margin: 3rem auto 0 auto;
+}
+
+main h2,
+h4,
+h6 {
+  margin: 0;
+}
+
+.friend-container {
+  padding: var(--container-padding);
+  border: var(--container-border);
+  border-radius: var(--container-border-radius);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: var(--grid-gap);
 }
 
-.App-link {
-  color: #61dafb;
+.friend-container h5,
+p {
+  margin: 0;
+  font-size: var(--container-text);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.friend-container a {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+.friend-container button {
+  border: none;
+  padding: var(--btn-padding);
+  border-radius: var(--btn-radius);
+  background-color: var(--btn-bg-color);
+  color: var(--btn-color);
+}
+
+h1 {
+  text-align: center;
 }
